fixed a bunch of issues with spacing

--- a/style.css
+++ b/style.css
@@ -6,9 +6,13 @@ Description: A cute, travel blog theme
 Version: 1.0
 */
 
+@font-face {
+    font-family: Beautiful Bloom;
+    src: url(http://escapewithcate.com/wp-content/themes/escapewithcate/fonts/BeautifulBloom-Regular.ttf);
+}
+
 
 /* Navigation */
-
 nav {
     height: 8%;
     background: rgba(255, 255, 255, .9);
@@ -117,6 +121,7 @@ header {
     margin-top: 10%;
     position: relative;
     font-size: 15pt;
+	text-align: center;
 }
 
 .about_sakura_mobile {
@@ -153,6 +158,9 @@ header {
     font-size: 70pt;
 }
 
+.follow_text {
+    margin:0;
+}
 #follow {
     font-size: 200px;
     color: #6ddfdf;
@@ -174,6 +182,7 @@ header {
     color: #6ddfdf;
     text-align: center;
     margin-top: 50px;
+    padding: 0;
 }
 
 #insta {
@@ -247,13 +256,16 @@ header {
     max-height: 300px;
 }
 
+.blogList {
+    text-align: center;
+}
 .cardText {
     color: #f888c7;
     font-family: 'Beautiful Bloom', sans-serif;
     font-size: 60pt;
-    position: relative;
+    margin: 0 auto;
     z-index: 2;
-    text-align: center;
+    position: relative;
     margin-top: -60px;
 }
 
@@ -402,6 +414,10 @@ footer #social-media-footer ul li:hover a .fa-github{
         color: black;
         transition: 0.4s;
     }
+	.blog {
+        margin-bottom: 25%;
+    }
+
     .blog_title {
         top: 30%;
         margin-left: 20%;
@@ -413,8 +429,11 @@ footer #social-media-footer ul li:hover a .fa-github{
     }
 
     .subscribe_button {
-        margin-top: 90%;
+        margin-top: 100%;
         margin-left: -70%;
+    }
+    .shell {
+        display: none;
     }
 }
 
@@ -445,7 +464,8 @@ footer #social-media-footer ul li:hover a .fa-github{
         margin-top: 70px;
     }
     .about_me_text {
-        margin-top: 400px;
+        margin-top: 370px;
+        margin-left: -30px;
     }
     .follow_along {
         height: 1650px;
@@ -454,6 +474,10 @@ footer #social-media-footer ul li:hover a .fa-github{
         background-repeat: no-repeat;
         background-position: 0% 45%;
         left: 0;
+    }
+
+    .instaGrid{
+        padding-right: 30px;
     }
 
     #insta {
@@ -487,30 +511,41 @@ footer #social-media-footer ul li:hover a .fa-github{
     }
 
     .cardText {
-        margin-top: -500px;
+        top: -30px;
         font-size: 120pt;
+    }
+	
+	.blog {
+        height: 766px;
+        margin-bottom: -5%;
     }
 
     .blog_title {
-        top: 45%;
-        margin-left: 8%;
         height: 100px;
         font-size: 120pt;
     }
 
     .subscribe_button {
         margin-top: 85%;
+        margin-left: -56%;
+    }
+}
+
+@media only screen and (min-width: 770px){
+    .blog_title {
+        top: 45%;
+        margin-left: 8%;
+    }
+    .subscribe_button {
         margin-left: -65%;
     }
- 
 }
+
 
 /* Blog */
 .blog {
-    height: 766px;
     width: 100%;
     text-align: center;
-    margin-bottom: -5%;
 }
 
 .blog_title {
